<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scrollView2"
    style="@style/scroll" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:background="@android:color/background_light"
            android:id="@+id/divTopo"
            tools:context="com.example.marcelasaidel.helpapp.MainActivity">


            <TextView
                android:id="@+id/lblTitulo"
                style="@style/tituloTopo"
                android:text="@string/app_name" />

            <ImageView
                android:id="@+id/imgMala"
                android:src="@drawable/images"
                style="@style/imagemHome"
                android:layout_below="@id/lblTitulo" />

            <TextView
                android:id="@+id/lblSubTitulo"
                style="@style/subTituloTopo"
                android:layout_below="@id/imgMala"
                android:text="@string/app_Titulo" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:layout_below="@id/divTopo"
            android:orientation="vertical">

            <Button
                android:id="@+id/btn03"
                android:onClick="changeActivityConvulsao"
                android:text="@string/btn_03"
                android:hint="@string/btn_03"
                android:textAllCaps="false"
                style="@style/botoesHome"/>

            <Button
                android:id="@+id/btn01"
                android:text="@string/btn_01"
                android:hint="@string/btn_01"
                android:onClick="changeActivityDesmaio"
                android:textAllCaps="false"
                style="@style/botoesHome" />

            <Button
                android:id="@+id/btn04"
                android:text="@string/btn_04"
                android:hint="@string/btn_04"
                android:textAllCaps="false"
                android:onClick="changeActivityFratura"
                style="@style/botoesHome" />

            <Button
                android:id="@+id/btn06"
                android:text="@string/btn_06"
                android:hint="@string/btn_06"
                android:textAllCaps="false"
                android:onClick="changeActivityInfarto"
                style="@style/botoesHome" />

            <Button
                android:id="@+id/btn02"
                android:text="@string/btn_02"
                android:hint="@string/btn_02"
                android:textAllCaps="false"
                android:onClick="changeActivityQueimadura"
                style="@style/botoesHome" />


        </LinearLayout>

    </RelativeLayout>
</ScrollView>


